# opengov-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
dashboard/: package.json
dashboard/src/lib/: api.ts
deploy/docker/: Dockerfile.discovery  Dockerfile.risk-engine  docker-compose.yml
discovery/: go.mod
discovery/cmd/: main.go
discovery/configs/: config.yaml
discovery/internal/fingerprint/: fingerprint.go
discovery/internal/inventory/: inventory.go
discovery/internal/risk/: classifier.go
discovery/internal/scanner/: scanner.go
docs/adrs/: 001-gateway-agnostic.md
docs/architecture/: overview.md
ingestion/: go.mod
ingestion/adapters/cloudflare/: adapter.go
ingestion/adapters/generic/: adapter.go
ingestion/adapters/mintmcp/: adapter.go
ingestion/adapters/runlayer/: adapter.go
ingestion/cmd/: main.go
ingestion/configs/: config.yaml
ingestion/internal/normalizer/: event.go
ingestion/internal/stream/: publisher.go
policy/examples/: default-risk-policy.json
policy/schemas/: risk-policy.schema.json
response/: go.mod
response/cmd/: main.go
response/configs/: config.yaml
response/internal/actions/: actions.go
response/internal/notifications/: router.go
response/internal/playbooks/: engine.go
response/templates/: critical-mcp-exposure.yaml
risk-engine/: Cargo.toml
risk-engine/cmd/: main.rs
risk-engine/internal/blast/: radius.rs
risk-engine/internal/frameworks/: nist.rs
risk-engine/internal/models/: agent.rs  event.rs  mod.rs
risk-engine/internal/scoring/: scorer.rs
(+5 files in other folders)
