[package]
name = "opengov-risk-engine"
version = "0.1.0"
edition = "2021"
description = "OpenGov AI - Risk scoring and blast radius calculation engine"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
dashmap = "5"

[[bin]]
name = "opengov-risk-engine"
path = "cmd/main.rs"
